@@ -16,8 +16,12 @@
  *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 #include "music/subconnector.hh"
+
 #if MUSIC_USE_MPI
+
 #include "music/communication.hh"
+#include "music/event_router.hh"
+
 #include <cstring>
 #include <algorithm>
 #include <iostream>
