@@ -1,5 +1,15 @@
 2012-08-21  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* music/subconnector.hh, music/event_routing_map.hh: Don't
+	#include <music/event_router.hh> which contains heavy template
+	stuff. Instead forward declare EventRouter.  Since both
+	subconnector.hh and event_routing_map.hh are included by other
+	header files, this speeds up compilation and decreases the
+	dependencies in the code tree.
+
+	* connector.cc, event_routing_map.cc, port.cc, subconnector.cc:
+	#include "music/event_router.hh".
+
 	* runtime.cc (Runtime::tick): Only access first element of
 	schedule if non-empty.
 	(Runtime::finalize): Only do schedule-related processing if
